# librus-client

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  lint.sh  pyproject.toml  pytest.ini  pytests.sh  requirements.txt
src/librus_client/: client.py
src/librus_client/model/: grades.py  messages.py  notices.py  timetable.py
src/librus_client/parsers/: grades.py  messages.py  notices.py  timetable.py
tests/python/: test_grades.py  test_messages.py  test_notices.py  test_timetable.py
tests/resources/: grades.html  message.json  notices.html  timetable.html
tests/resources/timetable_files/: 2fa.js  CloudStorageBrowseTool.1507325373.js  CsrfProtection.js  ErrorProvider.js  ImageSwaper.js  LibrusJQueryTheme.js  LibrusPrintStyleSheet2.1495831305.css  LibrusStyleSheet2.1722422433.css  LibrusStyleSheet2Light.1637964526.css  LibrusStyleSheet2NonIE.1361960241.css  MultiselectLibrus.1565269166.js  Utils.1628259749.js  ajax.js  amCharts.js  connectRMNToLesson.1507325373.js  cookie.js  cookieBox.js  fileValidator.1535145151.js  indywidualni.1666094592.js  jquery-ui-1.9.2.custom.min.1422664051.css  jquery.fancybox-1.3.4(1).css  jquery.fancybox-1.3.4.css  jquery.form.1615587149.js  jquery.multiselect.1422664051.js  jquery.multiselect.1628259749.css  jquery.sparkbox-select.js  jquery.treeview.css  librus-aditional.1507325373.css  librus-data-table.1596795859.js  librus-data-table.css  librus-dialog.1585948224.js  librus-dialog.css  librus-notification.1596795859.js  librus-notification.css  librus-panel.1581718575.js  (+21 more)
(+2 files in other folders)
